// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown snaps renders snapshot with basicProps 1`] = `
"<div className='dropdown'>
  <label htmlFor='__VALUE__'>
    <StateManager value={{...}} onChange={[Function: bound handleChange]} options={{...}} defaultInputValue='' defaultMenuIsOpen={false} defaultValue={{...}} />
  </label>
</div>"
`;

exports[`Dropdown snaps renders snapshot with fullProps 1`] = `
"<div className='dropdown'>
  <label htmlFor='__VALUE__'>
    __LABEL__
    <StateManager value={{...}} onChange={[Function: bound handleChange]} options={{...}} defaultInputValue='' defaultMenuIsOpen={false} defaultValue={{...}} />
  </label>
</div>"
`;
